Remove the exe extension from native version.
Windows build will add the exe extension automatically. The test script now requires the path to repman as argument.

--- a/native/Makefile
+++ b/native/Makefile
@@ -1,7 +1,8 @@
 all:
 	$(MAKE) -C inih
-	gcc -Iinih -o repman.exe repman.c inih/libinih.a
+	gcc -Iinih -o repman repman.c inih/libinih.a
 
 clean:
 	$(MAKE) -C inih clean
-	rm -f repman.exe
+	rm -vf repman.exe
+	rm -vf repman
